--- a/tasks/dotenv_setup.yml
+++ b/tasks/dotenv_setup.yml
@@ -14,3 +14,11 @@
     owner: "{{ capistrano_user }}"
     group: "{{ capistrano_user }}"
   tags: [ 'never', 'development' ]
+
+- name: Put in place the dotenv configuration file for testing
+  template:
+    src: dotenv_test_config.j2
+    dest: "{{ capistrano_base}}/{{ project_name }}/shared/.env.test"
+    owner: "{{ capistrano_user }}"
+    group: "{{ capistrano_user }}"
+  tags: [ 'never', 'development' ]
